<resources>
    <string name="app_name">Parental Control App</string>
    <string name="splash_app_name">Parental Control\nApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="english" translatable="false">English</string>
    <string name="telugu" translatable="false">తెలుగు</string>

    <string name="title_activity_locate_on_map">Map</string>

    <string name="sorry">Sorry!</string>
    <string name="nothing_found_driver">No Driver Found</string>
    <string name="nothing_found_class">No Class Found</string>
    <string name="nothing_found_section">No Section Found</string>
    <string name="nothing_found_student">No Student Found</string>
    <string name="nothing_found_teacher">No Teacher Found</string>
    <string name="nothing_found_notice">No Notice Found</string>

    <string name="delete">Delete</string>
    <string name="last_seen">Last seen on</string>
    <string name="likhita_school">Likitha school</string>

    <string name="clear_date">Clear Date</string>
    <string name="type_a_message">Type a message</string>
    <string name="slide_to_cancel">Slide To Cancel&#8230;</string>
    <string name="complaints">Complaints</string>
    <string name="no_any_complaint_yet">No Any Complaint Yet</string>
    <string name="today_s_complaints">Today\'s Complaints</string>
    <string name="share_location">Share Location</string>
    <string name="chat_with_parents">Chat with parents</string>
    <string name="drivers">Drivers</string>
    <string name="list_of_drivers">List of drivers</string>
    <string name="students">Students</string>
    <string name="class_section_wise_list_of_students">Class \u0026 section wise list of\nstudents</string>
    <string name="give_complaint">Give Complaint</string>
    <string name="chat_with_teachers">Chat with teachers</string>
    <string name="locate_child">Locate Child</string>
    <string name="see_current_location_of_driver">See current location of driver</string>
    <string name="teachers">Teachers</string>
    <string name="see_list_of_teachers">See list of teachers</string>
    <string name="noticeboard">Noticeboard</string>
    <string name="see_all_notices">See all notices</string>
    <string name="arrived">Arrived</string>
    <string name="not_arrived_yet">Not Arrived Yet</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="show_last_seen">Show last seen</string>
    <string name="show_read_unread_messages">Show read - unread messages</string>
    <string name="update">Update</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="sections">Sections</string>
    <string name="select_driver">Select Driver</string>
    <string name="settings">Settings</string>
    <string name="change_username_password_etc">Change username, password, etc.</string>
    <string name="set_driver">Set Driver</string>
    <string name="select_driver_that_pick_your_child">Select driver that pick your child</string>
    <string name="language">Language</string>
    <string name="set_language_of_the_app">Set language of the app</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_from_this_app">Sign out from this app.</string>
    <string name="feeling_happy_to_listen">Feeling Happy to Listen</string>
    <string name="okay">Okay</string>
    <string name="we_have_informed_the_driver_and_school">We have informed the driver and school.</string>
    <string name="thank_you">Thank you</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="you_are_not_connected">Looks like you\'re not connected with internet!</string>
    <string name="no_any_complaint_matching_search">No any complaint found matching your search</string>
    <string name="tracking_history">Tracking History</string>
    <string name="track_your_child">Track your child</string>
    <string name="scan_qr_code_of_children">Scan student card here</string>
    <string name="no_tracking_history">No Tracking History</string>
    <string name="scanner">Scanner</string>
    <string name="class_str">Class</string>
    <string name="current_location">Current Location</string>
    <string name="home_to_school">Home To School</string>
    <string name="school_to_home">School To Home</string>
    <string name="select_language">Select Language</string>
    <string name="messages_for_management">Messages from management</string>
    <string name="see_live_locations">See live locations</string>
    <string name="calendar">Calendar</string>
    <string name="all">All</string>
    <string name="today_s">Today\'s</string>
    <string name="yesterday">Yesterday</string>
    <string name="one_week_ago">One week ago</string>


    <string name="agora_app_id" translatable="false">25b67e207f614ef2ae6aae914b040ffc</string>
    <string name="agora_access_token" translatable="false">0066bb7966f95b44d09ba3a2e55cf1d57f7IACWui5ZepI9qt6/JrrYwwwuFbsnZ0NbQpFKhzBUx2IdzrryKFcAAAAAEABwjq6PEy4eYAEAAQAQLh5g</string>
    <string name="call">Call</string>
    <string name="call_to_parent">Call to parent</string>
    <string name="receive_call">Receive Call</string>
    <string name="ringing">Ringing</string>
    <string name="call_error">Something went wrong&#8230;</string>
    <string name="call_decliend">Declined</string>
    <string name="call_started">Call Started</string>
    <string name="call_ringing">Ringing</string>
    <string name="distance">Distance</string>
    <string name="app_theme">App Theme</string>
    <string name="change_theme_of_the_app">Change theme of the app</string>
    <string name="today">Today</string>
    <string name="calling">Calling&#8230;</string>
    <string name="tap_to_return_to_call">Tap to return to call</string>
    <string name="place">Place</string>
    <string name="nothing_found_place">No place found</string>
    <string name="track">Track</string>
    <string name="see">See</string>

</resources>