<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SchoolManager.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:contentInsetEnd="56dp"
            app:popupTheme="@style/Theme.SchoolManager.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_dashboard_button"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvMyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="?attr/pure_txt_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvMyProfileDescription"
                app:layout_constraintEnd_toStartOf="@id/ivProfile"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMyProfileDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_username_password_etc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/caption_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivProfile"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMyProfile" />

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_complaint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorPrimary"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSetDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_dashboard_button"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/clMyProfile">

            <TextView
                android:id="@+id/tvSetDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_driver"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="?attr/pure_txt_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvSetDriverDescription"
                app:layout_constraintEnd_toStartOf="@id/ivDriver"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSetDriverDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_driver_that_pick_your_child"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/caption_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivDriver"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSetDriver" />

            <ImageView
                android:id="@+id/ivDriver"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_driver"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorPrimary"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_dashboard_button"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/clSetDriver">

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="?attr/pure_txt_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvLanguageDescription"
                app:layout_constraintEnd_toStartOf="@id/ivLanguage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLanguageDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_language_of_the_app"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/caption_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivLanguage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

            <ImageView
                android:id="@+id/ivLanguage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_driver"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorPrimary"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_dashboard_button"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/clLanguage">

            <TextView
                android:id="@+id/tvAppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_theme"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="?attr/pure_txt_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvAppThemeDescription"
                app:layout_constraintEnd_toStartOf="@id/ivAppTheme"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAppThemeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_theme_of_the_app"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/caption_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivAppTheme"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppTheme" />

            <ImageView
                android:id="@+id/ivAppTheme"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_driver"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorPrimary"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_dashboard_button"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/clAppTheme">

            <TextView
                android:id="@+id/tvSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="?attr/pure_txt_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvSignOutDescription"
                app:layout_constraintEnd_toStartOf="@id/ivSignOut"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSignOutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_from_this_app"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/caption_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivSignOut"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignOut" />

            <ImageView
                android:id="@+id/ivSignOut"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_log_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorPrimary"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>